// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateEventEmitterH can generate for 'ArrayPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class ArrayPropsNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'BooleanPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class BooleanPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'ColorPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class ColorPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'DimensionPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class DimensionPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'EdgeInsetsPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class EdgeInsetsPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'EnumPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class EnumPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'EventNestedObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class EventNestedObjectPropsNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  struct OnChangeLocationSource {
      std::string url;
    };

  struct OnChangeLocationArrayOfObjectsValue {
      std::string str;
    };

  struct OnChangeLocationArrayOfObjects {
      OnChangeLocationArrayOfObjectsValue value;
    };

  struct OnChangeLocation {
      OnChangeLocationSource source;
    int x;
    int y;
    std::vector<OnChangeLocationArrayOfObjects> arrayOfObjects;
    };

  struct OnChange {
      OnChangeLocation location;
    };
  void onChange(OnChange value) const;
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'EventPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class EventPropsNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  struct OnChange {
      bool value;
    std::string source;
    int progress;
    Float scale;
    };

  struct OnEventDirect {
      bool value;
    };

  struct OnEventDirectWithPaperName {
      bool value;
    };

  enum class OnOrientationChangeOrientation {
    Landscape,
    Portrait
  };

  static char const *toString(const OnOrientationChangeOrientation value) {
    switch (value) {
      case OnOrientationChangeOrientation::Landscape: return \\"landscape\\";
      case OnOrientationChangeOrientation::Portrait: return \\"portrait\\";
    }
  }

  struct OnOrientationChange {
      OnOrientationChangeOrientation orientation;
    };

  struct OnEnd {
      
    };

  struct OnEventBubblingWithPaperName {
      
    };
  void onChange(OnChange value) const;

  void onEventDirect(OnEventDirect value) const;

  void onEventDirectWithPaperName(OnEventDirectWithPaperName value) const;

  void onOrientationChange(OnOrientationChange value) const;

  void onEnd(OnEnd value) const;

  void onEventBubblingWithPaperName(OnEventBubblingWithPaperName value) const;
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'FloatPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class FloatPropsNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'ImagePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class ImagePropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'IntegerPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class IntegerPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'InterfaceOnlyNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class InterfaceOnlyNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  struct OnChange {
      bool value;
    };
  void onChange(OnChange value) const;
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'MixedPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class MixedPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'MultiNativePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class MultiNativePropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'NoPropsNoEventsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class NoPropsNoEventsNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'ObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class ObjectPropsNativeComponentEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'PointPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class PointPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterH can generate for 'StringPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "EventEmitters.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterH.js
 */
#pragma once

#include <react/renderer/components/view/ViewEventEmitter.h>


namespace facebook::react {
class StringPropNativeComponentViewEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  
  
};
} // namespace facebook::react
",
}
`;
